Fixes for outline-issue on Safari

--- a/client/src/css/Game.module.css
+++ b/client/src/css/Game.module.css
@@ -173,9 +173,11 @@
 
 .gamePiece {
   position: absolute;
-  width: 86%;
-  height: 86%;
+  width: 87%;
+  height: 87%;
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
   transform: scale(.95);
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
@@ -204,15 +206,17 @@
 
 .whitePiece {
   background: white;
-  outline: 3px solid rgb(236, 236, 236);
-  outline-offset: -1px;
+  border: 3px solid rgb(236, 236, 236);
+  /* outline: 3px solid rgb(236, 236, 236); */
+  /* outline-offset: -1px; */
   animation: gamePieceAnimation .7s ease-in-out;
 }
 
 .blackPiece {
   background: rgb(19, 18, 18);
-  outline: 3px solid rgb(0, 0, 0);
-  outline-offset: -1px;
+  border: 3px solid rgb(0, 0, 0);
+  /* outline: 3px solid rgb(0, 0, 0); */
+  /* outline-offset: -1px; */
   animation: gamePieceAnimation .7s ease-in-out;
 }
 
